--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ requestr = {path = "../requestr"}
 snafu = "0.7.0-beta.0"
 serde = {version = "1.0.128",features=["derive"]}
 serde_json = "1.0.66"
+kiruna = {path = "../kiruna",features=["join"]}
+command-rs = {path = "../command-rs",features=["output"]}
 # temporary until we have better strings support
 objr = {path = "../objr"}
 
